--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@tailwindcss/forms": "^0.5.4",
+    "apexcharts": "^3.41.1",
     "chart.js": "^3.6.0",
+    "flowbite": "^1.8.1",
+    "ng-apexcharts": "^1.8.0",
     "ng2-charts": "^5.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
